# daily_stock_analysis

./: .env.example  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/scripts/: ai_review.py
.github/workflows/: ci.yml  daily_analysis.yml  docker-publish.yml
docs/: DEPLOY.md  README_CHT.md  README_EN.md  full-guide.md
src/: notification.py
src/stock_analyzer/: __main__.py  analyzer.py  analyzer_service.py  config.py  container.py  enums.py  feishu_doc.py  formatters.py  market_analyzer.py  notification.py  scheduler.py  search_service.py  storage.py
src/stock_analyzer/ai/: __init__.py  analyzer.py  clients.py  models.py  prompt_builder.py  prompts.py  response_parser.py  snapshot_builder.py  stock_names.py
src/stock_analyzer/application/: __init__.py  event_handlers.py  market_review.py
src/stock_analyzer/bot/: __init__.py  dispatcher.py  handler.py  message_adapter.py  (+1 more)
tests/: __init__.py  conftest.py
tests/integration/: test_data_providers_live.py
tests/unit/: test_ai_models.py  test_ai_prompt_builder.py  test_ai_response_parser.py  test_data_provider_base.py  test_data_service_cache.py  test_domain_constants.py  test_domain_enums.py  test_domain_events.py  test_domain_exceptions.py  test_domain_models.py  test_notification_base.py  test_persistence_database.py  test_technical_calculator.py  test_technical_enums.py  test_technical_formatter.py  test_technical_macd.py  test_technical_result.py  test_technical_rsi.py  test_technical_signal.py  test_technical_trend.py  test_utils_fallback.py  test_utils_logging.py  test_utils_stock_code.py
(+117 files in other folders)
