[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.21",
    "baostock>=0.8.9",
    "dependency-injector>=4.41.0",
    "dingtalk-stream>=0.24.3",
    "discord-py>=2.6.4",
    "efinance>=0.5.5.2",
    "fake-useragent>=2.2.0",
    "google-genai>=1.0.0",
    "google-search-results>=2.4.2",
    "httpx[socks]>=0.28.1",
    "json-repair>=0.55.2",
    "lark-oapi>=1.5.3",
    "lxml-html-clean>=0.4.3",
    "markdown2>=2.5.4",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pytdx>=1.72",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.46",
    "tavily-python>=0.7.21",
    "tenacity>=9.1.2",
    "tushare>=1.4.24",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
stock-analyzer = "stock_analyzer.__main__:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
